Fix ant build and 3D support